--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,3 +7,8 @@ AM_CPPFLAGS = -DGL_GLEXT_PROTOTYPES -DGL3_PROTOTYPES
 AM_CPPFLAGS += -std=c++11
 AM_CPPFLAGS += $(gl_CFLAGS) $(glew_CFLAGS) $(sdl2_CFLAGS) $(BOOST_CPPFLAGS)
 LIBS += $(gl_LIBS) $(glew_LIBS) $(sdl2_LIBS) $(BOOST_THREAD_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS)
+
+TESTS = TestApp
+check_PROGRAMS = $(TESTS)
+TestApp_SOURCES = TestCollision.cpp
+TestApp_LDADD = $(BOOST_UNIT_TEST_FRAMEWORK_LIBS)
